# naro-with-rust

./: README.md  Taskfile.yaml  compose.yaml
naro-back/: Cargo.toml
naro-back/migrations/: 0_create-table.sql  init.sql
naro-back/src/: context.rs  database.rs  error.rs  handler.rs  main.rs
naro-back/src/context/: errors.rs  validated_json.rs
naro-back/src/database/: auth.rs  country.rs  user.rs  user_password.rs  user_session.rs
naro-back/src/handler/: country.rs  session.rs
naro-front/: .prettierrc.json  README.md  package-lock.json  package.json  vite.config.ts
naro-front/src/: App.vue
naro-front/src/components/: HelloWorld.vue
naro-front/src/pages/: HomePage.vue  LoginPage.vue  MePage.vue  NotFound.vue  PingPage.vue  SignupPage.vue
naro-front/src/router/: index.ts
