[package]
name = "naro-back"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.5.0", features = ["add-extension", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
dotenvy = "0.15.7"
validator = { version = "0.14.0", features = ["derive"] }

sqlx = { version = "0.7", features = [ "mysql", "runtime-async-std-native-tls", "migrate" ] }
bcrypt = "0.15"

axum-extra = { version = "0.9", features = [ "typed-header" ] }
async-session = "3.0.0"

[dependencies.async-sqlx-session]
git = "https://github.com/maxcountryman/async-sqlx-session.git"
default-features = false
branch = "sqlx-0.7"
features = ["mysql"]